# autopilot-core

./: requirements.txt
.github/: copilot-instructions.md
app/connectors/: base.py  generic_rest.py  reddit.py
app/models/: item.py
app/workflows/: runner.py
pi-core/: .gitignore  README.md  ROADMAP.md  pyproject.toml
pi-core/scripts/: run_demo.sh
pi-core/source/: pyvenv.cfg
pi-core/src/picore/: __init__.py
pi-core/src/picore/config/: settings.py
pi-core/src/picore/control/: approvals.py  kill_switch.py  state.py
pi-core/src/picore/discovery/: extractor.py  ranker.py
pi-core/src/picore/models/: core.py
pi-core/src/picore/packaging/: pack.py
pi-core/src/picore/pipeline/: run.py  steps.py
pi-core/src/picore/product/: define.py  generator.py
pi-core/src/picore/sources/: base.py  hn_algolia.py
pi-core/src/picore/ui/: app.py
pi-core/src/picore/utils/: fs.py  logging.py  time.py
scripts/: run_demo.sh
