[tool.poetry]
name = "pi-core"
version = "0.1.0"
description = "Deterministic, local-only pipeline for productizing HN problems."
authors = ["SaltProphet"]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pydantic = ">=2.0.0"
requests = "^2.31.0"
gradio = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
